Fixes - Background and foreground colors do not have a sufficient contrast ratio.

--- a/src/components/ResumeLink/style.scss
+++ b/src/components/ResumeLink/style.scss
@@ -4,7 +4,7 @@
   a {
     border-radius: 8px;
     border: 1px solid #DCDCDC;
-    color: #A8A8A8;
+    color: #595959;
     font-family: Philosopher;
     font-size: 20px;
     font-weight: 700;
